testing name confirmed

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <h1 class="title">Hey</h1>
           <header class="title orange"><b> I'm Xander. </b></header>
           <p class="header__para">
-            I'm a <b class="orange">Frontend Test Software Engineer</b> and
+            I'm a <b class="orange">Frontend Software Engineer</b> and
             <b class="orange">data analyst</b>
             with an obsession for crafting rich applications. If that peaks your
             interest, let's chat.
