--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <figure class="modal__language">
               <img
                 class="modal__language--image"
-                src="https://cdn.iconscout.com/icon/free/png-256/react-3-1175109.png"
+                src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"
                 alt="React Logo"
               />
               <span class="language__name">React</span>
