added phoenix and elixir and python to details

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
           <h1 class="title">Hey</h1>
           <header class="title orange"><b> I'm Xander. </b></header>
           <p class="header__para">
-            I'm a <b class="orange">Frontend Software Engineer</b> and
+            I'm a <b class="orange">Software Engineer</b> and
             <b class="orange">data analyst</b>
             with an obsession for crafting rich applications. If that peaks your
-            interest, let's chat.
+            interest, we should talk more about it!
             <br />
             Here's a bit more
             <b class="orange click" onclick="toggleModal()">about me</b>.
@@ -114,12 +114,12 @@
             Here's a bit about me
           </h3>
           <h4 class="modal__sub-title modal__subtitle--about">
-            Frontend Software Engineer
+            Software Engineer
           </h4>
           <p class="modal__para">
-            I'm a <b class="orange">Frontend Software Engineer</b> with a deep
-            background in <b class="orange">data analytics</b> . Solving
-            problems and building applications is what I love to do.
+            I'm a <b class="orange">Software Engineer</b> with a deep background
+            in <b class="orange">data analytics</b> . Solving problems and
+            building applications is what I love to do.
             <br />
             <br />
             As an engineer, I build applications that are
@@ -148,18 +148,26 @@
             <figure class="modal__language">
               <img
                 class="modal__language--image"
-                src="https://cdn.iconscout.com/icon/free/png-256/javascript-1-225993.png"
-                alt="JavaScript Logo"
+                src="assets/python.png"
+                alt="Python Logo"
               />
-              <span class="language__name">Javascript</span>
+              <span class="language__name">Python</span>
             </figure>
             <figure class="modal__language">
               <img
                 class="modal__language--image"
-                src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a7/React-icon.svg/2300px-React-icon.svg.png"
-                alt="React Logo"
+                src="assets/elixir_logo.png"
+                alt="Elixir Logo"
               />
-              <span class="language__name">React</span>
+              <span class="language__name">Elixir</span>
+            </figure>
+            <figure class="modal__language">
+              <img
+                class="modal__language--image modal__language--image--phoenix"
+                src="assets/phoenix_logo.png"
+                alt="Phoenix Logo"
+              />
+              <span class="language__name">Phoenix</span>
             </figure>
             <figure class="modal__language">
               <img
