adjusted text in contact form

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             As an engineer, I build applications that are
             <b class="orange">fast, scalable, and secure</b>. As a data analyst,
             I <b class="orange">extract value</b> from the data those
-            applications produce. Got you excited? Me, too.
+            applications produce. Got you excited? Let's talk more about it!
           </p>
 
           <div class="modal__languages">
