--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
           <h1 class="title">Hey</h1>
           <header class="title orange"><b> I'm Xander. </b></header>
           <p class="header__para">
-            I'm a <b class="orange">Software Engineer</b> and
-            <b class="orange">data analyst</b>
+            I'm a <b class="orange">software engineer</b> and
+            <b class="orange">data nalyst</b>
             with an obsession for crafting rich applications. If that peaks your
             interest, we should talk more about it!
             <br />
