--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <header class="title orange"><b> I'm Xander. </b></header>
           <p class="header__para">
             I'm a <b class="orange">software engineer</b> and
-            <b class="orange">data nalyst</b>
+            <b class="orange">data analyst</b>
             with an obsession for crafting rich applications. If that peaks your
             interest, we should talk more about it!
             <br />
